--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "29.4.0",
     "@types/node": "18.11.18",
     "aws-cdk": "2.63.0",
+    "esbuild": "^0.17.5",
     "jest": "29.4.1",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
