--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.110",
     "@types/jest": "29.4.0",
     "@types/node": "18.11.18",
     "aws-cdk": "2.63.0",
