--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.272.0",
+    "@aws-sdk/client-kafka": "^3.276.0",
     "@aws-sdk/util-dynamodb": "^3.272.0",
+    "@jm18457/kafkajs-msk-iam-authentication-mechanism": "^2.1.1",
     "aws-cdk-lib": "2.63.0",
     "constructs": "10.1.239",
+    "kafkajs": "^2.2.3",
     "source-map-support": "0.5.21"
   }
 }
